force-app/main/default/objects/Client_Profile__c/Client_Profile__c.object-meta.xml
<CustomObject>
    <label>Referral Client Profile</label>
    <pluralLabel>Referral Client Profiles</pluralLabel>
    <description>added from sfdx plugin</description>
    <label>Client Profile</label>
    <pluralLabel>Client Profiles</pluralLabel>
    <description>added from sfdx plugin</description>
    <nameField>
        <type>AutoNumber</type>
        <label>Name</label>
        <displayFormat>CP-{0}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>