force-app/main/default/objects/Client_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Profile</relationshipLabel>
    <relationshipName>Client_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>