force-app/main/default/objects/Client_Profile__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <label>Date of Birth</label>
    <type>Date</type>
    <fullName>Date_of_Birth__c</fullName>
</CustomField>