force-app/main/default/objects/Client_Profile__c/fields/Employment__c.field-meta.xml
<CustomField>
    <label>Employment</label>
    <type>Picklist</type>
    <fullName>Employment__c</fullName>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed full-time</fullName>
            </value>
            <value>
                <fullName>Employed part-time</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>