force-app/main/default/objects/Client_Profile__c/fields/Home_Owner__c.field-meta.xml
<CustomField>
    <label>Home Owner</label>
    <type>Checkbox</type>
    <fullName>Home_Owner__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>