force-app/main/default/objects/Client_Profile__c/fields/Home_Renter__c.field-meta.xml
<CustomField>
    <label>Home Renter</label>
    <type>Checkbox</type>
    <fullName>Home_Renter__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>